--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <body>
     <div class="resume-container">
         <aside class="sidebar">
-            <img src="./picture.png" alt="Profile" class="profile-pic"/>
-            <h1>Nomozov Nazarjon</h1>
+            <img src="./yoddi.jpg" alt="Profile" class="profile-pic"/>
+            <h1>Nomozov Yodgorbek</h1>
             <p class="position">Backend Developer</p>
 
             <section>
                 <h2>Men haqimda</h2>
-                <p>Salom, men Nomozov Nazarjon 2004-yilda tug‘ilganman. Hozirda Qarshi Davlat Universiteti talabasi bo‘lib, Amaliy matematika yo‘nalishida o‘qiyman.</p>
+                <p>Salom, men Nomozov Yodgorbek 2004-yilda tug‘ilganman. Hozirda Qarshi Davlat Universiteti talabasi bo‘lib, Amaliy matematika yo‘nalishida o‘qiyman.</p>
             </section>
 
             <section>
                 <h2>Kontakt</h2>
                 <ul class="contact-info">
-                    <li>📞 +998 99 084 31 04</li>
-                    <li>✉️ nazarnomozov730@gmail.com</li>
+                    <li>📞 +998 90 426 59 04</li>
+                    <li>✉️ yodgorbeknomozov3@gmail.com</li>
                     <li>📍 Qashqadaryo, O‘zbekiston</li>
                 </ul>
             </section>
@@ -32,7 +32,7 @@
                 <ul>
                     <li>O‘zbek tili</li>
                     <li>Ingliz tili</li>
-                    <li>Rus tili</li>
+                    
                 </ul>
             </section>
         </aside>
@@ -41,7 +41,7 @@
             <section>
                 <h2>Ta’lim</h2>
                 <p>Qarshi Davlat Universiteti, Amaliy Matematika – 3-bosqich talaba</p>
-                <p>Yakkabog‘ tumani 67-maktab bitiruvchisi</p>
+                <p>QMII akademik litseyi bitiruvchisi</p>
             </section>
 
             <section>
@@ -56,7 +56,6 @@
                     <span>CSS</span>
                     <span>Python</span>
                     <span>Django</span>
-                    <span>SQLite3</span>
                     <span>Matematika</span>
                 </div>
             </section>
